--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: "Welcome to the home of your new documentation"
+description: "Welcome to Alice - Your AI-Powered Campaign Management Platform"
 ---
 
 <img
@@ -14,58 +14,79 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Dark"
 />
 
-## Setting up
+## What is Alice?
 
-The first step to world-class documentation is setting up your editing environments.
+Alice is your AI-powered campaign management platform that revolutionizes how you create and manage outreach campaigns. By combining advanced AI capabilities with your expertise, Alice helps you craft personalized, engaging communications at scale.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="Smart Targeting"
+    icon="bullseye-arrow"
+    href="/getting-started"
   >
-    Get your docs set up locally for easy development
+    Define and reach your ideal audience with precision using advanced filtering
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="AI-Powered Communication"
+    icon="robot"
+    href="/getting-started#2-setting-up-your-library"
   >
-    Preview your changes before you push to make sure they're perfect
+    Let Alice's AI craft personalized messages that resonate with your audience
   </Card>
 </CardGroup>
 
-## Make it yours
+## Core Features
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Discover how Alice can transform your outreach campaigns.
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Library Management"
+    icon="books"
+    href="/getting-started#2-setting-up-your-library"
   >
-    Customize your docs to your company's colors and brands
+    Create and manage reusable components for consistent messaging across campaigns
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Brand Voice"
+    icon="microphone"
+    href="/getting-started#2-setting-up-your-library"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Customize how Alice communicates to match your brand's unique style
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="Campaign Automation"
+    icon="gears"
+    href="/getting-started#3-creating-your-first-campaign"
   >
-    Build interactive features and designs to guide your users
+    Automate campaign workflows while maintaining personalization
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Performance Analytics"
+    icon="chart-mixed"
+    href="/getting-started#4-launch-and-monitor"
   >
-    Check out our showcase of our favorite documentation
+    Track and optimize your campaigns with real-time insights
+  </Card>
+</CardGroup>
+
+## Get Started
+
+Ready to transform your outreach campaigns? Follow our guide to get up and running with Alice.
+
+<CardGroup cols={2}>
+  <Card
+    title="Quick Start Guide"
+    icon="rocket"
+    href="/getting-started"
+  >
+    Set up your first campaign in minutes with our step-by-step guide
+  </Card>
+  <Card
+    title="Best Practices"
+    icon="star"
+    href="/getting-started#best-practices"
+  >
+    Learn proven strategies to maximize your campaign success
   </Card>
 </CardGroup>
