Improve Salesforce integration documentation layout with CardGroup

--- a/integrations/salesforce.mdx
+++ b/integrations/salesforce.mdx
@@ -16,18 +16,19 @@ icon: "salesforce"
 
 Before setting up the Salesforce integration, ensure you have:
 
-<Steps>
-  ### Salesforce Account Requirements
-  - A Salesforce organization with API access enabled
+<CardGroup cols={2}>
+<Card title="Salesforce Account Requirements" icon="computer">
+A Salesforce organization with API access enabled
   - Administrator or System Integrator role
   - API access enabled in your Salesforce edition
+</Card>
 
-### Permission Setup
-
-- Appropriate user permissions configured
-- API enabled user profile
-- Required object permissions (Lead, Contact, Account, Opportunity)
-  </Steps>
+<Card title="Permission Setup" icon="lock">
+  - Appropriate user permissions configured
+  - API enabled user profile
+  - Required object permissions (Lead, Contact, Account, Opportunity)
+</Card>
+</CardGroup>
 
 ### Quick Setup
 
