Add CRM integration cards to deduplication documentation

--- a/integrations/crm-deduplication.mdx
+++ b/integrations/crm-deduplication.mdx
@@ -9,6 +9,12 @@ icon: "layer-group"
   ensuring data consistency and maintaining clean customer data.
 </Card>
 
+<CardGroup cols={2}>
+<Card title="Salesforce" horizontal icon="salesforce" color="#019EDB"></Card>
+<Card title="HubSpot" horizontal icon="hubspot" color="#FF5C36"></Card>
+<Card title="Pipedrive" horizontal icon={<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="20" height="20" rx="10" fill="#017737"/><path d="M15.48 8.33C15.48 11.03 13.74 12.88 11.24 12.88C10.06 12.88 9.08 12.39 8.71 11.78L8.73 12.41V16.29H6.18V6.27C6.18 6.13 6.15 6.1 5.99 6.1H5.12V3.97H7.24C8.21 3.97 8.45 4.81 8.52 5.17C8.9 4.53 9.89 3.78 11.36 3.78C13.83 3.78 15.48 5.61 15.48 8.33ZM12.88 8.35C12.88 6.9 11.94 5.91 10.75 5.91C9.78 5.91 8.68 6.55 8.68 8.37C8.68 9.55 9.33 10.79 10.71 10.79C11.72 10.79 12.88 10.06 12.88 8.35Z" fill="white"/></svg>} color="#027737"></Card>
+</CardGroup>
+
 ## Overview
 
 CRM deduplication is a critical process that helps maintain data quality by identifying and managing duplicate records across your CRM systems. Alice's deduplication engine works across all supported CRM integrations, including Salesforce, HubSpot, and Pipedrive.
