Add HubSpot integration documentation with comprehensive setup guide

--- a/deliverability.mdx
+++ b/deliverability.mdx
@@ -142,29 +142,29 @@ Think of email deliverability as your email's journey from send to inbox. Just l
 
 <AccordionGroup>
   <Accordion icon="square-1" title="Before You Start">
-    - [ ] Set up your professional sending domain
-    - [ ] Import your contact list
-    - [ ] Create your email templates
+    [ ] Set up your professional sending domain
+    [ ] Import your contact list
+    [ ] Create your email templates
   </Accordion>
 
   <Accordion icon="square-2" title="Getting Ready to Send">
-    - [ ] Clean up your contact list
-    - [ ] Group similar contacts together
-    - [ ] Plan your sending schedule
+    [ ] Clean up your contact list
+    [ ] Group similar contacts together
+    [ ] Plan your sending schedule
   </Accordion>
 
   <Accordion icon="square-3" title="Writing Your Emails">
-    - [ ] Create engaging subject lines
-    - [ ] Write clear, valuable messages
-    - [ ] Include one clear call-to-action
-    - [ ] Test your emails before sending
+    [ ] Create engaging subject lines
+    [ ] Write clear, valuable messages
+    [ ] Include one clear call-to-action
+    [ ] Test your emails before sending
   </Accordion>
 
   <Accordion icon="square-4" title="After Sending">
-    - [ ] Check your success metrics
-    - [ ] Review any delivery issues
-    - [ ] Update your contact lists
-    - [ ] Learn from your results
+    [ ] Check your success metrics
+    [ ] Review any delivery issues
+    [ ] Update your contact lists
+    [ ] Learn from your results
   </Accordion>
 </AccordionGroup>
 
